site/scdl/menus-collectifs/1.2.0/CHANGELOG.md
<MenuSchema />

<MenuSchema />

# Changelog

# v1.2 

* modification des types de champs associées à des listes fermées (enum) autorisant des saisies de valeurs multiples
* suppression du pattern associé aux champs menuPublicationDate et menuModificationDate
* mise à jour des fichiers exemples correspondant à la nouvelle syntaxe des champs
 
# V1.1

* mise à jour des descriptions des champs, des exemples et des règles de gestion associées aux champs
* mise à jour des fichiers exemples

## v1.0

* renommage des champs suite à la mise à jour des recommandations de nommage SCDL
* mise à jour des fichiers exemples


## v0.9

* rapatriement de champs du schéma des plats vers le schéma des menus
* mise à jour des exemples
* revue des descriptions

## v0.8

* corrections mineures

## v0.7 

* ajustements dans les listes de valeurs autorisées
* corrections diverses et typos

## v0.6

* ajout du champ menuTexturePLat après discussion avec les éditeurs Salqmandre, Easilys et datameal
* champ menuModificationDate passé en non obligatoire
* disctinction entre les champs restaurantType et restaurantConvive
* modifications dans les listes de valeurs
* mise à jour du fichier exemple

## v0.5

* ajout de la valeur "tous" pour le type de convive
* ajout d'un champ menuRegimePlat permettant de préciser l'utilisation du champ menuPrecisionPlat
* ajout d'un champ menuPublicationPlatDate permettant de préciser la date de publication d'une donnée et de la distinguer de la date de dernière modification
* mise à jour des fichiers exemples

## v0.4

* ajout du champ restaurantConvive permettant de renseigner le type de convives dans le restaurant collectif
* correction d'erreur de frappe
* mise à jour des fichiers exemples

## v0.3

* ajout du champ restaurantNombreConvive permettant de renseigner le nombre (approximatif) de convives dans le restaurant collectif
* correction d'erreur de frappe
* harmonisation dans l'utilisation des minuscules dans les listes de valeurs autorisées
* ajout de la valeur "petit-déjeuner" dans la liste des types de repas
* mise à jour des fichiers exemples

## v0.2

* ajout d'une distinction entre les signe de qualité et les labels
* ajout d'un identifiant pour les restaurant
* changement du champ menuRegimePlat en menuCategoriePlat à la sémantique plus large
* ajout des champs menuModificationDate et menuModificationActivite pour la traçabilité des modifications
* ajout des sources réglementaires
* mise à jour de l'exemple de fichier valide

## v0.1

Création à partir des exemples de fichiers publiés et de discussion avec des représentant des collectivités locales.